package com.example.roulette;

public class Roulette {
    private String type;
    private String[] segments;
    private int start;
    private int end;
    public String getType(){ return type; }
    public void setType(String type) { this.type = type; }
    public String[] getSegments(){ return segments; }
    public void setSegments(String[] segments) { this.segments = segments; }
    public int getStart(){ return start; }
    public void setStart(int start) { this.start = start; }
    public int getEnd(){ return end; }
    public void setEnd(int end) { this.end = end; }


}
